--- a/src/package.json
+++ b/src/package.json
@@ -5,16 +5,17 @@
   "main": "index.js",
   "dependencies": {
     "axios": "^1.4.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^7.1.1",
     "nodemon": "^2.0.22"
   },
-  "devDependencies": {},
   "scripts": {
     "pet": "nodemon petConexao.js",
     "user": "nodemon userConexao.js",
     "pref": "nodemon prefConexao.js",
-    "match": "nodemon matchCalculator.js"
+    "match": "nodemon matchCalculator.js",
+    "carac": "nodemon caracteristicas.js"
   },
   "keywords": [],
   "author": "",
