--- a/src/routes/package.json
+++ b/src/routes/package.json
@@ -2,7 +2,7 @@
   "name": "testeapi",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "conexao.js",
   "dependencies": {
     "axios": "^1.4.0",
     "cors": "^2.8.5",
@@ -11,11 +11,7 @@
     "nodemon": "^2.0.22"
   },
   "scripts": {
-    "pet": "nodemon petConexao.js",
-    "user": "nodemon userConexao.js",
-    "pref": "nodemon prefConexao.js",
-    "match": "nodemon matchCalculator.js",
-    "carac": "nodemon caracteristicas.js"
+    "start": "nodemon conexao.js"
   },
   "keywords": [],
   "author": "",
