--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "testeapi",
   "version": "1.0.0",
   "description": "",
-  "main": "conexao.js",
+  "main": "index.js",
   "dependencies": {
     "axios": "^1.4.0",
     "cors": "^2.8.5",
@@ -11,7 +11,7 @@
     "nodemon": "^2.0.22"
   },
   "scripts": {
-    "start": "nodemon conexao.js"
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
