--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "testeapi",
   "version": "1.0.0",
   "description": "",
-  "main": "conexao.js",
+  "main": "index.js",
   "dependencies": {
     "axios": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.1",
     "nodemon": "^2.0.22"
   },
   "scripts": {
-    "start": "nodemon conexao.js"
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
